--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
         <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
-    <a-scene>
-            <!-- A-Frame code to be added here. -->
+        <a-scene>
+            <a-box
+            color="red"
+            position="-5 5 -8"
+            rotation="0 45 0"
+            width="2"
+            height="2"
+            depth="2"
+            >
+        </a-box>
         </a-scene>
     </body>
 </html>
